--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -111,3 +111,10 @@ main{
     color: var(--color-text-dark);
   }
 }
+
+@media (max-width: 75rem) {
+  .headerIconLink{
+    height: auto;
+    width: auto;
+  }
+}
